@@ -37,14 +37,16 @@ sub run {
 	$self->{'_opts'} = {
 		'd' => undef,
 		'h' => 0,
+		'm' => undef,
 		'v' => 1,
 	};
-	if (! getopts('d:hv:', $self->{'_opts'}) || @ARGV < 1
+	if (! getopts('d:hm:v:', $self->{'_opts'}) || @ARGV < 1
 		|| $self->{'_opts'}->{'h'}) {
 
-		print STDERR "Usage: $0 [-d test_dir] [-h] [-v level] [--version] directory\n";
+		print STDERR "Usage: $0 [-d test_dir] [-h] [-m match_string] [-v level] [--version] directory\n";
 		print STDERR "\t-d test_dir\tTest directory (default is directory in system tmp).\n";
 		print STDERR "\t-h\t\tPrint help.\n";
+		print STDERR "\t-m match_string\tMatch string (default is not defined).\n";
 		print STDERR "\t-v level\tVerbosity level (default 1, min 0, max 9).\n";
 		print STDERR "\t--version\tPrint version.\n";
 		print STDERR "\tdirectory\tDirectory with DWG files to test.\n";
@@ -111,9 +113,28 @@ sub _exec {
 		if (my @num = ($stderr =~ m/ERROR/gms)) {
 			print STDERR "dwgread '$dwg_file' has ".scalar @num." ERRORs\n";
 		}
+
+		if (defined $self->{'_opts'}->{'m'}) {
+			foreach my $match_line ($self->_match_lines($stderr)) {
+				print $match_line."\n";
+			}
+		}
 	}
 
 	return;
+}
+
+sub _match_lines {
+	my ($self, $string) = @_;
+
+	my @ret;
+	foreach my $line (split m/\n/ms, $string) {
+		if ($line =~ /$self->{'_opts'}->{'m'}/) {
+			push @ret, $line;
+		}
+	}
+
+	return @ret;
 }
 
 1;
